--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_hidden_drawer
 description: Beautiful custom hidden drawer. Please press star in my repo if you like it. Thank you.
-version: 0.1.4
-author: Robby Rahmana <robbyrahmana79@gmail.com>
+version: 0.1.5
 homepage: https://github.com/robbyrahmana/flutter_hidden_drawer
 
 environment:
@@ -10,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^3.1.0
+  provider: ^4.0.5+1
 
 dev_dependencies:
   flutter_test:
