--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,11 @@
 name: example
 description: Beautiful custom hidden drawer. Please press star in my repo if you like it. Thank you.
-version: 0.1.4
+version: 1.0.0
 author: Robby Rahmana <robbyrahmana79@gmail.com>
 homepage: https://github.com/robbyrahmana/flutter_hidden_drawer
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
