--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_hidden_drawer
 description: Beautiful custom hidden drawer. Please press star in my repo if you like it. Thank you.
-version: 0.1.6
+version: 1.0.0
 homepage: https://github.com/robbyrahmana/flutter_hidden_drawer
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
